--- a/P1/main.ipynb
+++ b/P1/main.ipynb
@@ -54,8 +54,7 @@
    "source": [
     "# project: p1\n",
     "# submitter: yzhang2232\n",
-    "# partner: none\n",
-    "# hours: 0.34"
+    "# partner: none\n"
    ]
   }
  ],
