--- a/P2/main.ipynb
+++ b/P2/main.ipynb
@@ -17,8 +17,7 @@
     "\n",
     "# project: p2\n",
     "# submitter: yzhang2232\n",
-    "# partner: none\n",
-    "# hours: 0.3"
+    "# partner: none\n"
    ]
   },
   {
